--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FECC - NUMBER</title>
-  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="./css/global.css">
 </head>
 <body>
 
@@ -14,5 +14,5 @@
   </main>
 
 </body>
-<script src="/js/main.js" defer></script>
+<script src="./js/main.js" defer></script>
 </html>
